# dynamic-qrcode

./: .gitignore  LICENSE  README.md  default-links.json  default-links.toml  pyproject.toml  requirements.txt
dynamic_qrcode/: __main__.py  app.py  configuration.py
dynamic_qrcode/components/: http_redirect_repository.py  qr_code_generation.py
